[package]
name = "soroban-byte-battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]

[dependencies]
soroban-sdk = { version = "0.2.1"}
soroban-auth = { version = "0.2.1" }
stellar-xdr = { version = "0.0.7", features = ["next", "std"], optional = true }


[dev_dependencies]
soroban-sdk = { version = "0.2.1"}
soroban-auth = { version = "0.2.1", features = ["testutils"] }
soroban-byte-battle = {path = ".", features = ["testutils"]}
rand = { version = "0.7.3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
